# OS

./: .gitignore  Cargo.toml  Dockerfile  LTPtestcase.txt  Makefile  NighthawkOS初赛幻灯片.pptx  README.md  loongarch.dtb  loongarch.dts  rust-toolchain.toml  test_result.txt  决赛现场文档.md
kernel/: Cargo.toml  Makefile  build.rs  link.ld  linker.ld
kernel/.cargo/: config  config.toml
kernel/src/: boot.rs  console.rs  entry.S  entry.rs  lang_item.rs  link_app.asm  link_app.rs  linkapp-la.asm  linkapp-rv.asm  linkapp.asm  linkapp.asm.tmpl  loader.rs  logging.rs  loongarch64_link_app.asm  main.rs  sbi.rs
kernel/src/driver_os/: mod.rs
kernel/src/entry/: loongarch64.rs  mod.rs  riscv64.rs
kernel/src/net/: addr.rs  interface.rs  mod.rs  msg.rs  sock.rs  socket.rs  sockopt.rs
kernel/src/osdriver/: manager.rs  mmio.rs  mod.rs  pbla.rs  pbrv.rs  pci.rs  probe.rs
kernel/src/processor/: guard.rs  hart.rs  mod.rs
kernel/src/syscall/: bpf.rs  consts.rs  fanotify.rs  fs.rs  fsmount.rs  io.rs  key.rs  misc.rs  mm.rs  mod.rs  net.rs  poll.rs  process.rs  sche.rs  signal.rs  sys_wait4.rs  time.rs  user.rs
kernel/src/task/: cap.rs  futex.rs  future.rs  kernelproc.rs  manager.rs  mask.rs  mod.rs  pkey.rs  process_manager.rs  sig_members.rs  task.rs  taskf.rs  threadgroup.rs  tid.rs  time.rs  time_stat.rs  timeid.rs  wait_queue.rs
kernel/src/task/signal/: _sigret_loong.asm  _sigret_riscv.asm  futex.rs  has_signal.rs  loongarch64_sigreturn_trampoline.asm  mod.rs  pidfd.rs  riscv64_sigreturn_trampoline.asm  sig_exec.rs  sig_info.rs
kernel/src/trap/: csr_env.rs  kernel_trap_handler.rs  loong_trap.s  mod.rs  rv_trap.asm  rv_trap.s  sum.rs  trap.asm  trap_context.rs  trap_env.rs  trap_handle.rs  trap_handler.rs  trap_return.rs  trap_syscall.rs  user_trap.rs
kernel/src/trap/trap_handler/: mod.rs
kernel/src/trap/trap_handler/kernel_trap_handler/: loongarch64.rs  mod.rs  riscv64.rs  unaligned_la.rs  unaligned_la.rs.bk
kernel/src/trap/trap_handler/user_trap_handler/: loongarch64.rs  mod.rs  riscv64.rs
kernel/src/vm/: addr_space.rs  elf.rs  iomap.rs  mapping_flags.rs  mem_perm.rs  mmap.rs  mod.rs  page_table.rs  pte.rs  shm.rs  user_ptr.rs  vm_area.rs
kernel/src/vm/pte/: loongarch64.rs  mod.rs  riscv64.rs
lib/arch/: Cargo.toml
lib/arch/src/: crmd.rs  lib.rs
lib/arch/src/console/: loongarch64.rs  mod.rs  riscv64.rs
lib/arch/src/hart/: loongarch64.rs  riscv64.rs
lib/arch/src/interrupt/: loongarch64.rs  riscv64.rs
lib/arch/src/mm/: loongarch64.rs  riscv64.rs
lib/arch/src/pte/: loongarch64.rs  mod.rs  riscv64.rs
lib/arch/src/riscv64/: interrupt.rs  mm.rs  mod.rs  sstatus.rs  time.rs
lib/arch/src/time/: loongarch64.rs  riscv64.rs
lib/arch/src/trap/: loongarch64.rs  mod.rs  riscv64.rs
lib/driver/: Cargo.toml
lib/driver/src/: cpu.rs  device.rs  hal.rs  lib.rs  manager.rs  plic.rs  test.rs
lib/driver/src/block/: mod.rs  virtblk.rs
lib/driver/src/block/ahci/: ahci.rs  drv_ahci.rs  libahci.rs  mod.rs  platform.rs
lib/driver/src/block/dw_mshc/: mmc.rs
lib/driver/src/console/: loongarch64.rs  riscv64.rs
lib/driver/src/icu/: cascaded.rs  ehic.rs  extioi.rs  icu2k1000.rs  icu_lavirt.rs  mod.rs  pch.rs  plic.rs
lib/driver/src/net/: loopback.rs  mod.rs  netbuf.rs  netpool.rs  virtnet.rs
lib/driver/src/net/gmac/: drv_eth.rs  eth_defs.rs  eth_dev.rs  gmac.rs  mod.rs  platform.rs
lib/driver/src/net/netpool/: netbuf.rs
lib/driver/src/qemu/: hal.rs  mod.rs  uart.rs  virtblk.rs
lib/driver/src/sbi/: loongarch64.rs  mod.rs  riscv64.rs
lib/driver/src/serial/: mod.rs  uart8250.rs
lib/ext4/: Cargo.toml
lib/ext4/src/: dentry.rs  disk.rs  fs.rs  lib.rs  superblock.rs
lib/ext4/src/ext/: dir.rs  file.rs  inode.rs  link.rs  mod.rs
lib/ext4/src/file/: dir.rs  file.rs  link.rs  mod.rs  reg.rs
lib/ext4/src/inode/: dir.rs  file.rs  link.rs  mod.rs
lib/fat32/: Cargo.toml
lib/fat32/src/: dentry.rs  disk.rs  fs.rs  lib.rs  superblock.rs
lib/fat32/src/file/: dir.rs  file.rs
lib/fat32/src/inode/: dir.rs  file.rs
lib/logger/: Cargo.toml
lib/logger/src/: lib.rs
lib/mm/: Cargo.toml
lib/mm/src/: address.rs  frame.rs  heap.rs  lib.rs  mm_error.rs  pte.rs  vm.rs
lib/mm/src/page_cache/: mod.rs  page.rs
lib/mm/src/vm/: addr_space.rs  elf.rs  mem_perm.rs  mod.rs  page_table.rs  pte.rs  user_ptr.rs  vm_area.rs
lib/mm/src/vm/page_cache/: mod.rs  page.rs
lib/mutex/: Cargo.toml
lib/mutex/src/: lib.rs  up.rs
lib/mutex/src/mutex/: mod.rs  optimistic_mutex.rs  share_mutex.rs  sleep_mutex.rs  spin_mutex.rs  spin_then_sleep_mutex.rs
lib/net/: Cargo.toml
lib/net/src/: addr.rs  bench.rs  device.rs  externf.rs  interface.rs  lib.rs  portmap.rs  raw.rs  rttoken.rs  socketset.rs  udp.rs  unix.rs
lib/net/src/tcp/: core.rs  listenentry.rs  listentable.rs  mod.rs  recvfuture.rs  tcppoll.rs  tcpsr.rs  tcpstate.rs
lib/osfs/: Cargo.toml
lib/osfs/src/: fd_table.rs  lib.rs  passwd.rs  pselect.rs  simplefile.rs  tmp.rs  var.rs
lib/osfs/src/dev/: mod.rs  shm.rs
lib/osfs/src/dev/full/: dentry.rs  file.rs  inode.rs  mod.rs
lib/osfs/src/dev/loopx/: blkinfo.rs  dentry.rs  externf.rs  file.rs  inode.rs  loopinfo.rs  mod.rs
lib/osfs/src/dev/null/: dentry.rs  file.rs  inode.rs  mod.rs
lib/osfs/src/dev/rtc/: dentry.rs  file.rs  inode.rs  ioctl.rs  mod.rs
lib/osfs/src/dev/stdio/: stdin.rs  stdout.rs
lib/osfs/src/dev/tty/: dentry.rs  file.rs  inode.rs  (+3 more)
lib/osfs/src/etc/: fs.rs  mod.rs  superblock.rs
lib/osfs/src/fs/: bcachefs.rs  btrfs.rs  mod.rs  xfs.rs
lib/osfs/src/pipe/: inode.rs  mod.rs  read.rs  readfile.rs  ringbuffer.rs  write.rs  writefile.rs
lib/osfs/src/proc/: confreg.rs  fs.rs  gconfig.rs  mod.rs  superblock.rs
lib/osfs/src/simple/: anon.rs  dentry.rs  file.rs  fs.rs  inode.rs  mod.rs
lib/osfs/src/special/: mod.rs
lib/osfs/src/sys/: fs.rs  mod.rs  superblock.rs
lib/vfs/: Cargo.toml
lib/vfs/src/: dcache.rs  dentry.rs  direntry.rs  file.rs  fstype.rs  handle.rs  inode.rs  inoid.rs  inopage.rs  kstat.rs  lib.rs  page.rs  path.rs  stat.rs  superblock.rs
lib/vfs/src/fanotify/: config.rs  constants.rs  kinterface.rs  mod.rs  notes.md  types.rs
(+410 files in other folders)
