[workspace]
members = [ "kernel", "lib/*", "user"]
resolver = "2"

[workspace.dependencies]
async-task =  { version = "4.7", default-features = false }
bitflags = "2.9"
bit_field = "0.10"
bitmap-allocator = "0.2"
buddy_system_allocator = "0.11"
cfg-if = "1.0"
crate_interface = "0.1"
elf = { version = "0.7", default-features = false }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
log = "0.4"
riscv = { version = "0.13", features = ["s-mode"] }
riscv-rt = "0.14"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
spin = { version = "0.9", features = ["lazy"] }
strum = { version = "0.27", default-features = false, features = ["derive"] }
virtio-drivers = { version = "0.7" }
uart_16550 = "0.3"
downcast-rs = { version = "1.2", default-features = false }
hashbrown = "0.14"
async-trait = "0.1"
# lwext4_rust = { git = "https://github.com/EchudeT/lwext4_rust.git", rev = "cb70" }
