[workspace]
members = ["kernel", "lib/*", "user"]
resolver = "2"

[workspace.dependencies]
async-task = { version = "4.7", default-features = false }
async-trait = "0.1"
bit_field = "0.10"
bitflags = "2.9"
bitmap-allocator = "0.2"
buddy_system_allocator = "0.11"
cfg-if = "1.0"
crate_interface = "0.1"
downcast-rs = { version = "1.2", default-features = false }
hashbrown = "0.14"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
log = "0.4"
riscv = { version = "0.13", features = ["s-mode"] }
riscv-rt = "0.14"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
spin = { version = "0.9", features = ["lazy"] }
strum = { version = "0.27", default-features = false, features = ["derive"] }
virtio-drivers = { version = "0.7" }
uart_16550 = "0.3"
fatfs = { default-features = false,  git = "https://github.com/EchudeT/rust-fatfs.git", rev = "e656", features = [
    "alloc",
    "lfn",
    "log_level_info",
] }


elf = { git = "https://github.com/adong660/rust-elf.git", branch = "no-std-elfstream", default-features = false, features = [
    "alloc",
] }
lwext4_rust = { git = "https://github.com/EchudeT/lwext4_rust.git", rev = "719c" }



[workspace.dependencies.smoltcp]
git = "https://github.com/EchudeT/smoltcp.git"
default-features = false
features = [
    "alloc",
    "log",             # no std
    "medium-ethernet",
    "medium-ip",       # used for Loopback device
    "proto-ipv4",
    "proto-ipv6",
    "socket-raw",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "socket-dns",
    "proto-ipv6",
    "async",
    # "fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
    # "reassembly-buffer-size-65536", "reassembly-buffer-count-32",
    # "assembler-max-segment-count-32",
]
