[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../lib/config/" }
logger = { path = "../lib/logger/" }
simdebug = { path = "../lib/simdebug/" }
id_allocator = { path = "../lib/id_allocator/" }
mm = { path = "../lib/mm/" }
mutex = { path = "../lib/mutex/" }
executor = { path = "../lib/executor/" }
pps = { path = "../lib/pps/" }
arch = { path = "../lib/arch/" }
time = { path = "../lib/time/" }
timer = { path = "../lib/timer/" }
driver = { path = "../lib/driver/" }
systype = { path = "../lib/systype/" }
vfs = { path = "../lib/vfs/" }
osfs = { path = "../lib/osfs" }
osfuture = { path = "../lib/osfuture" }
# polyhal = { path = "../lib/polyhal" }
polyhal-macro = { path = "../lib/polyhal/polyhal-macro" }

bitflags = { workspace = true }
elf = { workspace = true }
log = { workspace = true }
crate_interface = { workspace = true }
cfg-if = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { workspace = true }
riscv-rt = { workspace = true }
sbi-rt = { workspace = true }

[build-dependencies]
config = { path = "../lib/config/" }
