[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
arch = { path = "../lib/arch/" }
config = { path = "../lib/config/" }
driver = { path = "../lib/driver/" }
executor = { path = "../lib/executor/" }
id_allocator = { path = "../lib/id_allocator/" }
logger = { path = "../lib/logger/" }
mm = { path = "../lib/mm/" }
mutex = { path = "../lib/mutex/" }
osfs = { path = "../lib/osfs" }
osfuture = { path = "../lib/osfuture" }
# polyhal = { path = "../lib/polyhal" }
polyhal-macro = { path = "../lib/polyhal/polyhal-macro" }
pps = { path = "../lib/pps/" }
simdebug = { path = "../lib/simdebug/" }
systype = { path = "../lib/systype/" }
time = { path = "../lib/time/" }
timer = { path = "../lib/timer/" }
vfs = { path = "../lib/vfs/" }

fdt = { workspace = true }
bitflags = { workspace = true }
cfg-if = { workspace = true }
crate_interface = { workspace = true }
elf = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
virtio-drivers = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { workspace = true }
riscv-rt = { workspace = true }
sbi-rt = { workspace = true }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = { workspace = true }

[build-dependencies]
config = { path = "../lib/config/" }
