[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
arch = { path = "../lib/arch/" }
config = { path = "../lib/config/" }
driver = { path = "../lib/driver/" }
id_allocator = { path = "../lib/id_allocator/" }
logger = { path = "../lib/logger/" }
mm = { path = "../lib/mm/" }
mutex = { path = "../lib/mutex/" }
executor = { path = "../lib/executor/" }
pps = { path = "../lib/pps/" }
timer = { path = "../lib/timer/" }
shm = { path = "../lib/shm/" }
systype = { path = "../lib/systype/" }
vfs = { path = "../lib/vfs/" }
osfs = { path = "../lib/osfs" }
osfuture = { path = "../lib/osfuture" }
net = { path = "../lib/net" }
polyhal-macro = { path = "../lib/polyhal-macro" }
simdebug = { path = "../lib/simdebug/" }
signal = { path = "../lib/signal/" }
common = { path = "../lib/common/" }

async-trait = { workspace = true }
hashbrown = { workspace = true }
flat_device_tree = { workspace = true }
bitflags = { workspace = true }
cfg-if = { workspace = true }
crate_interface = { workspace = true }
elf = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
virtio-drivers = { workspace = true }
smoltcp = { workspace = true }
spin = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { workspace = true }
riscv-rt = { workspace = true }
sbi-rt = { workspace = true }


[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = { workspace = true }

[build-dependencies]
config = { path = "../lib/config/" }

[features]
default = ["board"]
qemu = []
board = []
loopback = []
