[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
arch = { path = "../arch" }
config = { path = "../config" }
mm = { path = "../mm" }
mutex = { path = "../mutex" }
polyhal-macro = { path = "../polyhal/polyhal-macro" }
log = { workspace = true }
spin = { workspace = true }
uart_16550 = { workspace = true }
virtio-drivers ={ workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi-rt = { workspace = true, features = ["legacy"] }
