[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
arch = { path = "../arch" }
config = { path = "../config" }
mm = { path = "../mm" }
common = { path = "../common" }
osfuture = { path = "../osfuture" }
mutex = { path = "../mutex" }
polyhal-macro = { path = "../polyhal-macro" }

log = { workspace = true }
spin = { workspace = true }
uart_16550 = { workspace = true }
smoltcp = { workspace = true }
async-trait = { workspace = true }
downcast-rs = { workspace = true }
virtio-drivers = { workspace = true }
plic = { workspace = true }
bitfield-struct = { workspace = true }
byte-slice-cast = { workspace = true }
bitflags = { workspace = true }
rustversion = { workspace = true }


[features]
smoltcp = []
default = ["smoltcp"]

[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi-rt = { workspace = true, features = ["legacy"] }
