[package]
name = "ext4"
version = "0.1.0"
edition = "2024"

[dependencies]
vfs = { path = "../vfs/" }
driver = { path = "../driver/" }
config = { path = "../config/" }
systype = { path = "../systype/" }
mutex = { path = "../mutex/" }


lwext4_rust = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }