[package]
name = "ext4"
version = "0.1.0"
edition = "2024"

[dependencies]
vfs = { path = "../vfs/" }
driver = { path = "../driver/" }
config = { path = "../config/" }
systype = { path = "../systype/" }
mutex = { path = "../mutex/" }

lwext4_rust = { path = "../lwext4_rust/" }
log = { workspace = true }
async-trait = { workspace = true }
downcast-rs = { workspace = true }