[package]
name = "fat32"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config/" }
driver = { path = "../driver/" }
mutex = { path = "../mutex/" }
simdebug = { path = "../simdebug/" }
systype = { path = "../systype/" }
vfs = { path = "../vfs/" }
async-trait = { workspace = true }
fatfs = { workspace = true }
log = { workspace = true }