[package]
name = "mm"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
mutex = { path = "../mutex" }
simdebug = { path = "../simdebug" }
systype = { path = "../systype" }
bitmap-allocator = { workspace = true }
buddy_system_allocator = { workspace = true }
log = { workspace = true }
