[package]
name = "mm"
version = "0.1.0"
edition = "2024"

[dependencies]
arch = { path = "../arch" }
config = { path = "../config" }
mutex = { path = "../mutex" }
simdebug = { path = "../simdebug" }
systype = { path = "../systype" }
bitflags = { workspace = true }
bitmap-allocator = { workspace = true }
buddy_system_allocator = { workspace = true }
cfg-if = { workspace = true }
elf = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
riscv = { workspace = true }
