[package]
name = "mutex"
version = "0.1.0"
edition = "2024"

[dependencies]
osfuture = { path = "../osfuture" }
simdebug = { path = "../simdebug" }
logger = { path = "../logger" }

bitflags = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { workspace = true }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = { workspace = true }