[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
mutex = { path = "../mutex" }
driver = { path = "../driver" }
arch = { path = "../arch" }
timer = { path = "../timer" }
systype = { path = "../systype" }
osfuture = { path = "../osfuture" }
simdebug = { path = "../simdebug" }

smoltcp = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
crate_interface = { workspace = true }

[features]
smoltcp = []
default = ["smoltcp"]
log = []
