[package]
name = "osfs"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
ext4   = { path = "../ext4" }
fat32  = { path = "../fat32" }
vfs    = { path = "../vfs" }
systype =  { path = "../systype" }
mutex  = { path = "../mutex" }
driver = { path = "../driver" }
osfuture = { path = "../osfuture" }

async-trait = { workspace = true }
bitflags = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
strum = { workspace = true }