[package]
name = "osfs"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
driver = { path = "../driver" }
ext4   = { path = "../ext4" }
fat32  = { path = "../fat32" }
mutex  = { path = "../mutex" }
osfuture = { path = "../osfuture" }
systype =  { path = "../systype" }
vfs    = { path = "../vfs" }
async-trait = { workspace = true }
bitflags = { workspace = true }
crate_interface = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
strum = { workspace = true }