[package]
name = "vfs"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
driver = { path = "../driver" }
mm = { path = "../mm" }
mutex = { path = "../mutex" }
systype = { path = "../systype" }
osfuture = { path = "../osfuture" }
time = { path = "../time" }

async-trait = { workspace = true }
downcast-rs = { workspace = true }
elf = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
