[package]
name = "vfs"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
driver = { path = "../driver" }
mm = { path = "../mm" }
mutex = { path = "../mutex" }
osfuture = { path = "../osfuture" }
systype = { path = "../systype" }
simdebug = { path = "../simdebug" }

async-trait = { workspace = true }
bitflags = { workspace = true }
crate_interface = { workspace = true }
downcast-rs = { workspace = true }
elf = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
